tests/samples/positive/types/value_flow.ax
module value_flow;

struct Owner {
    value: i32;
}

fn make_owner(value: i32) -> Owner {
    return Owner { value: value };
}

fn consume(owner: Owner) -> i32 {
    return owner.value;
}

fn forward(owner: Owner) -> Owner {
    return owner;
}

fn return_after_branch(flag: bool) -> i32 {
    var owner: Owner = make_owner(8);
    if flag {
        return consume(owner);
    }
    return consume(owner);
}

fn main() -> i32 {
    let first: Owner = make_owner(3);
    let second: Owner = Owner { value: 4 };
    let copied: Owner = second;
    let forwarded: Owner = forward(first);

    var slot: Owner = make_owner(10);
    let consumed: i32 = consume(slot);
    slot = make_owner(20);

    let total: i32 = consume(copied) + consume(forwarded) + consumed + consume(slot) + return_after_branch(false);
    if total == 45 {
        return 0;
    }
    return total;
}
