tests/samples/negative/types/noncopy_option_is_some.ax
module noncopy_option_is_some;

import std.core.result;

noncopy struct Owner {
    value: i32;
}

fn make_owner() -> Owner {
    return Owner { value: 1 };
}

fn main() -> i32 {
    var option: Option<Owner> = Option.some(make_owner());
    if move(option).is_some() {
        return 1;
    }
    return 0;
}
